opam-version: "1.2"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
author: "Reynir Björnsson <reynir@reynir.dk>"
synopsis: "Unix specific code for ssh-agent"
dev-repo: "https://github.com/reynir/ocaml-ssh-agent.git"
homepage: "https://github.com/reynir/ocaml-ssh-agent/"
bug-reports: "https://github.com/reynir/ocaml-ssh-agent/issues/"
license: "BSD-2-clause"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.0"}
  "ssh-agent" {= version}
  "angstrom-unix"
  "faraday"
]
