opam-version: "1.2"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
author: "Reynir Björnsson <reynir@reynir.dk>"
synopsis: "Parsers and serializers for the ssh-agent protocol"
dev-repo: "https://github.com/reynir/ocaml-ssh-agent.git"
homepage: "https://github.com/reynir/ocaml-ssh-agent/"
bug-reports: "https://github.com/reynir/ocaml-ssh-agent/issues/"
license: "BSD-2-clause"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.0"}
  "ppx_cstruct" {build}
  "ppx_sexp_conv"
  "angstrom" {>= "0.10" & < "0.13"}
  "faraday" {>= "0.6" & < "0.8"}
  "nocrypto"
  "cstruct"
  "alcotest" {test}
  "sexplib" {test}
]
available: [ ocaml-version >= "4.04.0" ]
