opam-version: "2.0"
synopsis: "Ssh-agent protocol parser and serialization implementation"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
author: "Reynir Björnsson <reynir@reynir.dk>"
dev-repo: "git+https://github.com/reynir/ocaml-ssh-agent.git"
homepage: "https://github.com/reynir/ocaml-ssh-agent/"
bug-reports: "https://github.com/reynir/ocaml-ssh-agent/issues/"
license: "BSD-2-clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.0"}
  "ppx_cstruct" {build}
  "angstrom" {>= "0.14.0"}
  "faraday" {>= "0.6"}
  "mirage-crypto"
  "mirage-crypto-pk"
  "mirage-crypto-ec"
  "cstruct"
  "alcotest" {with-test}
]
